# dodola

./: .dockerignore  404.html  CHANGELOG.md  Dockerfile  HISTORY.rst  Makefile  README.md  README.rst  environment.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: buildpush.yaml  buildpushrelease.yaml  codeql-analysis.yml  container-publish.yaml  container.yaml  docs.yaml  test.yaml
changelog/: index.html
cli/: index.html
core/: index.html
docs/: cli.md  core.md  repository.md  services.md
dodola/: cli.py  core.py  repository.py  services.py
dodola/tests/: test_cli.py  test_core.py  test_repository.py  test_services.py
repository/: index.html
search/: search_index.json
services/: index.html
