[build-system]
requires = [
    "setuptools>=62.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dodola"
version = "0.1.0a0"
description = "GCM bias-correction and downscaling"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "dask == 2022.2.0",
    "click == 8.0.3",
    "cftime == 1.5.2",
    "numpy == 1.22.2",
    "xarray == 0.21.1",
    "xclim >= 0.30.1",
    "xesmf == 0.6.2",
    "zarr == 2.11.0",
]

[project.optional-dependencies]
complete = [
    "adlfs == 2022.2.0",
    "intake == 0.6.5",
    "intake-esm == 2021.8.17",
    "gcsfs == 2022.1.0",
    "papermill == 2.3.4",
    "s3fs == 2022.1.0",
]
test = [
    "pytest == 7.0.1",
    "pytest-cov"
]
docs = [
    "pdoc",
]


[project.urls]
Homepage = "https://github.com/ClimateImpactLab/dodola"
"Bug Tracker" = "https://github.com/ClimateImpactLab/dodola/issues"

[project.scripts]
dodola = "dodola.cli:dodola_cli"

[tool.setuptools]
packages = ["dodola"]
