[build-system]
requires = [
    "setuptools>=62.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dodola"
version = "0.1.0a0"
description = "GCM bias-correction and downscaling"
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "dask >= 2022.0.0",
    "click >= 8.0.0",
    "cftime",
    "numpy >= 1.22.0",
    "xarray >= 0.21.0",
    "xclim >= 0.30.1",
    "xesmf >= 0.6.0",
    "zarr",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
docs = [
    "pdoc",
]


[project.urls]
Homepage = "https://github.com/ClimateImpactLab/dodola"
"Bug Tracker" = "https://github.com/ClimateImpactLab/dodola/issues"

[project.scripts]
dodola = "dodola.cli:dodola_cli"

[tool.setuptools]
packages = ["dodola"]
