[build-system]
requires = [
    "setuptools>=62.0",
    "wheel",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dodola"
description = "GCM bias adjustment and downscaling"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "dask >= 2022.0.0",
    "click >= 8.0.0",
    "cftime",
    "numpy >= 1.22.0",
    "xarray >= 0.21.0",
    "xclim >= 0.30.1",
    "xesmf >= 0.6.0",
    "zarr",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
docs = [
    "pdoc",
]


[project.urls]
Homepage = "https://climateimpactlab.github.io/dodola"
Documentation = "https://climateimpactlab.github.io/dodola"
Source = "https://github.com/ClimateImpactLab/dodola"
"Bug Tracker" = "https://github.com/ClimateImpactLab/dodola/issues"

[project.scripts]
dodola = "dodola.cli:dodola_cli"

[tool.setuptools]
packages = ["dodola"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "dodola/_version.py"
