[metadata]
name = dodola
description = GCM bias-correction and downscaling
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ClimateImpactLab/dodola
project_urls =
    Bug Tracker = https://github.com/ClimateImpactLab/dodola/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
python_requires = >=3.8

[options.entry_points]
console_scripts =
    dodola = dodola.cli:dodola_cli

[flake8]
exclude = docs
ignore = E203,E266,E402,E501,W503,F401,C901
max-line-length = 100
max-complexity = 18
select = B,C,E,F,W,T4,B9
